--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,21 @@ authors = ["Roger Heirkstad <roger.herikstad@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Reactant = "3c362404-f566-11ee-1572-e11a4b42c853"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+Enzyme = "0.13.44"
 Lux = "1.12.4"
+Optimisers = "0.4.6"
+Printf = "1.11.0"
+Reactant = "0.2.113"
+StableRNGs = "1.0.3"
+Static = "1.2.0"
+Zygote = "0.7.7"
