--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Reactant = "3c362404-f566-11ee-1572-e11a4b42c853"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
@@ -21,4 +22,5 @@ Printf = "1.11.0"
 Reactant = "0.2.113"
 StableRNGs = "1.0.3"
 Static = "1.2.0"
+StatsBase = "0.34.5"
 Zygote = "0.7.7"
