--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "RecurrentNetworkModels"
 uuid = "60024d2f-e447-450b-ab68-c236a8c9f1ce"
 authors = ["Roger Heirkstad <roger.herikstad@gmail.com>"]
-version = "0.1.0"
+version = "0.2.0"
 
 [deps]
+ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
@@ -16,6 +17,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+ChainRulesTestUtils = "1.13.0"
 Enzyme = "0.13.44"
 Lux = "1.12.4"
 Optimisers = "0.4.6"
