--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Roger Heirkstad <roger.herikstad@gmail.com>"]
 version = "0.3.0"
 
 [deps]
+CRC32c = "8bf52ea8-c179-5cab-976a-9e18b702a9bc"
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
@@ -18,6 +19,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+CRC32c = "1.11.0"
 ChainRulesTestUtils = "1.13.0"
 Enzyme = "0.13.44"
 JLD2 = "0.5.15"
