Relax compat for StatsBase

--- a/Project.toml
+++ b/Project.toml
@@ -30,5 +30,5 @@ ProgressMeter = "1.10.4"
 Reactant = "0.2.113"
 StableRNGs = "1.0.3"
 Static = "1.2.0"
-StatsBase = "0.34.5"
+StatsBase = "0.24.0 - 0.34.5"
 Zygote = "0.7.7"
